--- a/JAVASCRIPT Dasar/Hard/Part-5/19-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/19-tugas/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				margin: 0;
+				padding: 0;
+				text-align: center;
+				background-color: #f7f7f7;
+			}
+			.container {
+				width: 200px;
+				margin: 50px auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			}
+			.time-display {
+				font-size: 2em;
+				font-weight: bold;
+				color: #333;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Waktu Saat Ini</h2>
+			<div class="time-display" id="time-display">
+				<!-- Waktu akan ditampilkan di sini -->
+			</div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
