--- a/JAVASCRIPT Dasar/Hard/Part-5/20-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/20-tugas/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				margin: 0;
+				padding: 0;
+				text-align: center;
+				background-color: #f4f4f4;
+			}
+			.container {
+				width: 300px;
+				margin: 50px auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			}
+			button {
+				width: 100%;
+				padding: 10px;
+				background-color: #4caf50;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: #45a049;
+			}
+			#message {
+				margin-top: 20px;
+				font-size: 1.2em;
+				color: #333;
+				display: none;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Pesan Tombol</h2>
+			<button id="show-message-btn">Tampilkan Pesan</button>
+			<p id="message">Ini adalah pesan yang muncul setelah tombol ditekan.</p>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
