--- a/JAVASCRIPT Dasar/Hard/Part-5/21-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/21-tugas/index.html
@@ -1,15 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				background-color: #e9ecef;
+				margin: 0;
+				padding: 0;
+			}
+			.container {
+				width: 400px;
+				margin: 50px auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			}
+			h2 {
+				text-align: center;
+				color: #333;
+			}
+			input[type='text'] {
+				width: 100%;
+				padding: 10px;
+				margin-bottom: 10px;
+				border: 1px solid #ddd;
+				border-radius: 4px;
+			}
+			button {
+				width: 100%;
+				padding: 10px;
+				background-color: #007bff;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: #0056b3;
+			}
+			.output {
+				margin-top: 10px;
+				text-align: center;
+				font-size: 18px;
+				font-weight: bold;
+				color: #333;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Pengubah Teks ke Kapital</h2>
+			<input type="text" id="input-text" placeholder="Masukkan teks..." />
+			<button id="convert-btn">Ubah Menjadi Kapital</button>
+			<div class="output" id="output-text"></div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
