--- a/JAVASCRIPT Dasar/Hard/Part-5/22-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/22-tugas/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				background-color: #f0f0f0;
+				margin: 0;
+				padding: 0;
+				text-align: center;
+			}
+			.container {
+				width: 300px;
+				margin: 50px auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			}
+			button {
+				width: 100%;
+				padding: 10px;
+				background-color: #007bff;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+				margin-bottom: 10px;
+			}
+			button:hover {
+				background-color: #0056b3;
+			}
+			.result {
+				font-size: 1.2em;
+				font-weight: bold;
+				margin-top: 20px;
+				color: #333;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<h2>Informasi Tombol Terakhir</h2>
+			<button id="btn1">Tombol 1</button>
+			<button id="btn2">Tombol 2</button>
+			<ul class="result" id="last-clicked">
+				<!-- Informasi tombol terakhir yang diklik akan ditampilkan di sini -->
+			</ul>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
