--- a/JAVASCRIPT Dasar/Hard/Part-5/23-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/23-tugas/index.html
@@ -1,15 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				text-align: center;
+				background-color: #f8f9fa;
+				margin: 0;
+				padding: 0;
+			}
+			.container {
+				margin-top: 50px;
+				width: 300px;
+				margin-left: auto;
+				margin-right: auto;
+				background-color: #fff;
+				padding: 20px;
+				border-radius: 8px;
+				box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+			}
+			p {
+				margin: 10px 0;
+				font-size: 1.2em;
+				color: #333;
+			}
+			input[type='text'] {
+				width: 100%;
+				padding: 10px;
+				margin-bottom: 10px;
+				border: 1px solid #ddd;
+				border-radius: 4px;
+			}
+			button {
+				padding: 10px 20px;
+				font-size: 1em;
+				background-color: #ffc107;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+			}
+			button:hover {
+				background-color: #e0a800;
+			}
+			.result {
+				margin-top: 10px;
+				font-size: 1.2em;
+				font-weight: bold;
+				color: #333;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="container">
+			<p>Apa ibukota Indonesia?</p>
+			<input type="text" id="answer-input" placeholder="Masukkan jawaban Anda" />
+			<button id="check-answer-btn">Periksa Jawaban</button>
+			<div class="result" id="quiz-result">Jawaban Anda akan muncul di sini.</div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
