--- a/JAVASCRIPT Dasar/Hard/Part-5/25-tugas/index.html
+++ b/JAVASCRIPT Dasar/Hard/Part-5/25-tugas/index.html
@@ -1,15 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
 
-  <!-- link -->
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <script src="js/main.js"></script>
-</body>
+		<!-- link -->
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				background-color: #f7f7f7;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				height: 100vh;
+			}
+			.bmi-calculator {
+				background-color: #fff;
+				padding: 20px;
+				border-radius: 8px;
+				box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+				width: 350px;
+			}
+			h1 {
+				font-size: 1.5em;
+				color: #333;
+			}
+			label {
+				display: block;
+				margin: 10px 0;
+			}
+			input[type='number'] {
+				padding: 10px;
+				width: 100%;
+				border-radius: 4px;
+				border: 1px solid #ddd;
+				margin-bottom: 20px;
+			}
+			button {
+				padding: 10px 20px;
+				background-color: #007bff;
+				color: white;
+				border: none;
+				border-radius: 4px;
+				cursor: pointer;
+				width: 100%;
+			}
+			button:hover {
+				background-color: #0056b3;
+			}
+			.result {
+				margin-top: 20px;
+				font-size: 1.2em;
+				color: #333;
+			}
+			.category {
+				margin-top: 10px;
+				font-size: 1.1em;
+				color: #555;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="bmi-calculator">
+			<h1>Kalkulator BMI</h1>
+
+			<label for="weight">Berat Badan (kg):</label>
+			<input type="number" id="weight" placeholder="Masukkan berat badan" />
+
+			<label for="height">Tinggi Badan (cm):</label>
+			<input type="number" id="height" placeholder="Masukkan tinggi badan" />
+
+			<button id="calculate-btn">Hitung BMI</button>
+
+			<div class="result">
+				<p>Indeks BMI Anda: <span id="bmi-result"></span></p>
+				<p>Kategori: <span id="bmi-category"></span></p>
+			</div>
+		</div>
+		<script src="js/main.js"></script>
+	</body>
 </html>
